kubernetes/apps/flux-system/flux-operator/instance/github/webhooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    cert-manager.io/cluster-issuer: zerossl-prod
    cert-manager.io/private-key-rotation-policy: Always
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
    cert-manager.io/private-key-encoding: PKCS8
    cert-manager.io/subject-organizations: DarkfellaNET
spec:
  ingressClassName: external
  tls:
    - hosts:
        - &host "flux-webhook.darkfellanetwork.com"
      secretName: flux-webhook-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
